Code quality changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head>
 <body>
-    <div id="number">fbbfbb</div>
-    <div id="person">dndhb</div>
-    <h4>Made with help of <a href="https://github.com/zsk-poznan/get-lucky" target="_blank">get-lucky</a></h4>
+    <div class="wrapper">
+        <div id="number"></div>
+        <div id="person"></div>
+    </div>
+    <div class="credits">
+        <h4>Made with help of <a href="https://github.com/zsk-poznan/get-lucky" target="_blank">get-lucky</a></h4>
+    </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
