--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head>
 <body>
-    <div id="number">fbbfbb</div>
-    <div id="person">dndhb</div>
+    <div id="number">Łado</div>
+    <div id="person">wanie</div>
     <h4>Made with help of <a href="https://github.com/zsk-poznan/get-lucky" target="_blank">get-lucky</a></h4>
     <script type="text/javascript" src="script.js"></script>
 </body>
